# narou

./: .gitignore  Dockerfile  docker-compose.yml  evaluation.ipynb  feature_importance.html  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: data_explanation.xlsx  sample_submission.csv  test.csv
eda/: check_writer.ipynb  eda_2021.ipynb  eda_table.ipynb  eda_text.ipynb  embedding.ipynb  keyword.ipynb
embedding/: README.md  emb_roberta.py  generate_universal.ipynb  tfidf.ipynb  tfidf.py  try.ipynb
ensemble/: ensemble.py
exp_1/: config.yaml  main.py  requirements.txt  train.ipynb
exp_10/: d_reduction.ipynb  main.py  preprocessing.py
exp_11/: d_reduction.ipynb  preprocessing.py
exp_12/: README.md  main.py  preprocessing.py
exp_13/: README.md  main.py  preprocessing.py
exp_14/: main.py  preprocessing.py  requirements.txt
exp_15/: README.md  main.py  preprocessing.py
exp_16/: main.py  preprocessing.py
exp_17/: main.py  preprocessing.py
exp_18/: README.md  check.ipynb  main.py  preprocessing.py
exp_19/: README.md  main.py  preprocessing.py
exp_2/: main.py
exp_20/: main.py  preprocessing.py
exp_21/: main.py  preprocessing.py
exp_3/: main.py  requirements.txt
exp_6/: README.md  fold_generator.py  main.ipynb  main.py  preprocessing.ipynb  preprocessing.py  try_cv.ipynb
exp_7/: README.md  main.py  try_cv.ipynb
exp_8/: main.py  preprocessing.ipynb  preprocessing.py  try_cv.ipynb
exp_9/: main.py  preprocessing.py
exp_roberta_lgb/: main.ipynb  main.py
output/: exp7_0.csv  lgb_test_submission.csv  submit.csv  submit_rulebase.csv  (+2 more)
(+200 files in other folders)
